compiler-core/src/parse/snapshots/gleam_core__parse__tests__multiple_external_for_same_project_javascript.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@external(javascript, \"one\", \"two\")\n@external(javascript, \"three\", \"four\")\npublic fn one(x: Int) -> Int {\n  todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "one", "two")
@external(javascript, "three", "four")
public fn one(x: Int) -> Int {
  todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:1
  │
3 │ @external(javascript, "three", "four")
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute

This attribute has already been given.
