compiler-core/src/parse/snapshots/gleam_core__parse__tests__string_single_char_suggestion.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n    public fn main() {\n        let a = 'example'\n      }\n    "
snapshot_kind: text
---
----- SOURCE CODE

    public fn main() {
        let a = 'example'
      }
    

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:17
  │
3 │         let a = 'example'
  │                 ^ Unexpected single quote

Hint: Strings are written with double quotes.
